// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bin script points nowhere does not try to create symlink or node_modules/.bin directory: fs module calls 1`] = `
Object {
  "createSymlink": Array [],
  "isDirectory": Array [],
  "isFile": Array [
    Array [
      "<repoRoot>/packages/osd-pm/src/utils/bar/bin/bar.js",
    ],
    Array [
      "<repoRoot>/packages/osd-pm/src/utils/bar/bin/bar.js",
    ],
  ],
  "isSymlink": Array [],
}
`;

exports[`bin script points to a file creates a symlink in the project node_modules/.bin directory: fs module calls 1`] = `
Object {
  "createSymlink": Array [
    Array [
      "<repoRoot>/packages/osd-pm/src/utils/bar/bin/bar.js",
      "<repoRoot>/packages/osd-pm/src/utils/foo/node_modules/.bin/bar",
      "exec",
    ],
    Array [
      "<repoRoot>/packages/osd-pm/src/utils/bar/bin/bar.js",
      "<repoRoot>/packages/osd-pm/src/utils/baz/node_modules/.bin/bar",
      "exec",
    ],
  ],
  "isDirectory": Array [],
  "isFile": Array [
    Array [
      "<repoRoot>/packages/osd-pm/src/utils/bar/bin/bar.js",
    ],
    Array [
      "<repoRoot>/packages/osd-pm/src/utils/bar/bin/bar.js",
    ],
  ],
  "isSymlink": Array [],
}
`;
